# CS1410

./: .gitignore
hw06/: CMakeLists.txt  README  notes.md
hw06/include/: README  hw06_lib.h
hw06/src/: README  hw06  hw06.c  hw06.py  hw06_lib.c  hw06_lib.py
hw06/test/: hw06_test.c  hw06_test.correct  hw06_test.py  hw06_test5.correct  input.correct  input2.correct  input3.correct  input4.correct  input5.correct
module0/: temp_conversion_1.py  temp_conversion_2.py
module1/your_turn_1/: notes.md  your_turn_1.cpp
module1/your_turn_2/: main.cpp  notes.md
module1/your_turn_3/: main.cpp  notes.md
module1/your_turn_4/: main.cpp  notes.md
module2/your_turn_1/: main.cpp  notes.md
module2/your_turn_16_4/: input.txt  main.cpp  notes.md
module2/your_turn_6_8/: main.cpp  notes.md
module3/your_turn_7_1_2/: main.cpp  notes.md
module3/your_turn_7_1_7/: Mouse.cpp  Mouse.h  main.cpp  notes.md  run.sh
module3/your_turn_7_2/: notes.md  overloading.cpp
programming_lab_1/: main.cpp  notes.md
programming_lab_2/: main.cpp  notes.md  test.cpp
programming_lab_3/: calc.cpp  fraction.cpp  fraction.h  run.sh
programming_lab_4/: calc.cpp  fraction.cpp  fraction.h  notes.md
scratch_work/: quiz_2_3.cpp  zy_labs_2_30.cpp  zy_labs_3_27.cpp
test_cplusplus/: test_1.c  test_prep_exam_1.cpp  testing_1.cpp
